[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/levels/level2/Level2.gd" type="Script" id=1]
[ext_resource path="res://src/characters/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/levels/level2/Level2Landscape.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/winWindow/WinWindow.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/ui/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/visualHit/Hit.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/pauseMenu/pauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ui/inventory/Inventory.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui/gameOverWindow/WindowGameOver.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/objects/IgnisRegularLevel/IgnisRegularLevel.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/objects/mechanism/Mechanism.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/objects/lever/Lever.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/characters/enemy1/Enemy1.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/ui/hint/Hint.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 56 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 72 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 344, 10 )

[node name="Level2" type="Node2D"]
script = ExtResource( 1 )

[node name="Level2Landscape" parent="." instance=ExtResource( 3 )]

[node name="Characters" type="Node2D" parent="."]

[node name="Player" parent="Characters" instance=ExtResource( 2 )]
position = Vector2( 360, 660 )

[node name="Enemy" parent="Characters" instance=ExtResource( 13 )]
position = Vector2( 488, 528 )
falling_at_start = true

[node name="Enemy2" parent="Characters" instance=ExtResource( 13 )]
position = Vector2( 296, 296 )

[node name="Ignises" type="Node2D" parent="."]

[node name="IgnisDoor" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 128, 672 )
type = "column"
health_at_start = 4

[node name="IgnisDoor2" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 832, 672 )
type = "column"
health_at_start = 4

[node name="IgnisRegularLevel" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 496, 672 )
type = "simple"
health_at_start = 2

[node name="IgnisRegularLevel2" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 640, 672 )
type = "simple"
health_at_start = 3

[node name="IgnisRegularLevel3" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 976, 512 )
type = "simple"

[node name="IgnisRegularLevel4" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 1361, 576 )
type = "simple"
health_at_start = 2

[node name="IgnisRegularLevel6" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 768, 288 )
type = "simple"

[node name="IgnisHint" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 408, 256 )
type = "hint"

[node name="IgnisHint2" parent="Ignises" instance=ExtResource( 10 )]
position = Vector2( 1608, 576 )
type = "hint"

[node name="Objects" type="Node2D" parent="."]

[node name="Lever" parent="Objects" instance=ExtResource( 12 )]
position = Vector2( 288, 216 )

[node name="Mechanism" parent="Objects" instance=ExtResource( 11 )]
position = Vector2( 1560, 564 )

[node name="Hints" type="Node2D" parent="."]

[node name="Hint" parent="Hints" instance=ExtResource( 14 )]
position = Vector2( 240, 232 )
scale = Vector2( 0.25, 0.25 )
text = "There is a lever on the platform. Pick it up by pressing E near it. Then you can see it in your inventory by pressing I"

[node name="Hint2" parent="Hints" instance=ExtResource( 14 )]
position = Vector2( 1528, 448 )
scale = Vector2( 0.25, 0.25 )
text = "This door can be opened by Mechanism. Find Lever, press E near Mechanism to insert Lever, than hold E to open the door"

[node name="Hint3" parent="Hints" instance=ExtResource( 14 )]
position = Vector2( 192, 608 )
scale = Vector2( 0.25, 0.25 )
text = "Be careful. There is an Enemy ahead. He runs towards visible Ignis and destroys it. Try to follow him, while keeping the distance"

[node name="Timer" type="Timer" parent="Hints"]
one_shot = true
autostart = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUD" instance=ExtResource( 5 )]
margin_bottom = 106.0

[node name="WinWindow" parent="." instance=ExtResource( 4 )]

[node name="WindowGameOver" parent="." instance=ExtResource( 9 )]

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]

[node name="Inventory" parent="." instance=ExtResource( 8 )]

[node name="Hit" parent="." instance=ExtResource( 6 )]

[node name="Win" type="Area2D" parent="."]
position = Vector2( 1696, 544 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win"]
shape = SubResource( 1 )

[node name="End" type="Area2D" parent="."]
position = Vector2( 1816, 536 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
shape = SubResource( 2 )

[node name="Death" type="Area2D" parent="."]
position = Vector2( 1144, 872 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
shape = SubResource( 3 )
[connection signal="timeout" from="Hints/Timer" to="Hints/Hint3" method="activate"]
[connection signal="body_entered" from="Win" to="." method="_on_Win_body_entered"]
[connection signal="body_entered" from="End" to="." method="_on_End_body_entered"]
[connection signal="body_entered" from="Death" to="." method="_on_Death_body_entered"]
